Add answers swagger
